# Gaggle

./: LICENSE.md  README.md
.github/workflows/: release.yml
backend/: .gitignore  apps.go  auth.go  auth_endpoints_test.go  build.bat  chat.go  chat_test.go  config.go  database.go  endpoints.go  go.mod  go.sum  main.go  playtime.go  playtime_endpoints.go  playtime_endpoints_test.go  social.go  social_endpoints.go  test_helpers.go
backend/gaggle_backend_tests/: Get test user.bru  bruno.json
cli/: go.mod  main.go
frontend/: .gitignore  Cargo.toml  Trunk.toml  go.mod  index.html  package-lock.json  package.json  tailwind.config.js  wails.json
frontend/frontend/: index.html  package-lock.json
frontend/src/: api.rs  app.rs  auth.rs  components.rs  confirm.rs  main.rs  net.rs  styles.css  toast.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs  net.rs
frontend/src/screens/: admin.rs  chat.rs  dashboard.rs  downloads.rs  error.rs  library.rs  mod.rs  settings.rs  social.rs
gui/: Taskfile.yml  go.mod  go.sum  main.go  wails.json
gui/frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
gui/frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
gui/frontend/.svelte-kit/output/client/.vite/: manifest.json
gui/frontend/.svelte-kit/output/client/_app/: version.json
gui/frontend/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
gui/frontend/src/: app.css  app.html
gui/frontend/src/routes/: +page.svelte
(+16 files in other folders)
