[package]
name = "gaggle_ui"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "HtmlSelectElement",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
console_error_panic_hook = "0.1.7"
reqwest = "0.13.1"
base64 = "0.22.1"

[workspace]
members = ["src-tauri"]
